# waks_cstd

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon
.cache/clangd/index/: io.h.CD841A710F259CB3.idx  main.c.233A85F50EEB7D53.idx
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md
include/: arena.h  data_structures.h  io.h  iterators.h  types.h  waks_error.inc  wt_io.h
scripts/: cross-build.sh  detect-stack.sh  dev-reload.sh  dev.sh  lint.sh  release.sh  setup.sh  test.sh  verify.sh
src/: main.c
tests/: arena_test.c
